# autoIG

./: .gitignore  README.md  autoIG.dbml  coverage.py  crontab  dbml.html  deploment.py  deploment_v2.py  deploment_v3.py  deployment_old.py  deployment_v1.py  explore_model.ipynb  knn_regressor.sav  main.py  model.pkl  model_data_yf.pkl  pyproject.toml  trade.py  whipe_data.py
.history/: pyproject_20220306203804.toml  pyproject_20220419154150.toml  pyproject_20220419154152.toml  pyproject_20220419154153.toml  pyproject_20220419154202.toml  pyproject_20220419154203.toml
autoIG/: DEL_autoknn.py  DEL_setup.py  config.py  create_data.py  epics.py  fetch_data.py  instruments.py  modelling.py  notebook_utils.py  setup.py  tickers.py  trade.py  utils.py
autoIG/deployment/: all_deployment_config.py  deployment_config.py  deployment_v2.py  deployment_v3.py  deployment_v4.py
docs/: database.dbml  database.sql  database_remove_comments.sql
mlruns/0/: meta.yaml
mlruns/993369624604660845/: meta.yaml
notebooks/: DEL_trading_ig_config.py  IG_basic_explore.ipynb  IG_search_markets_explore.ipynb  IG_streaming_explore.ipynb  dbnomics_explore.ipynb  explore_dbnomics.ipynb  explore_ig.ipynb  explore_model.ipynb  explore_search_markets.ipynb  explore_yf.ipynb  knn.ipynb  macro_monitoring.ipynb  modelling_explore.ipynb  notebook_utils.py  oanda.cfg  oanda_explore.ipynb  odsc.ipynb  streaming_explore.ipynb  transactions_by_model.ipynb  yahoo_finance_explore.ipynb  yf_explore.ipynb
notebooks/explore/: IG_activities.ipynb  IG_basic.ipynb  IG_basic_explore.ipynb  IG_confirms.ipynb  IG_search_markets.ipynb  IG_streaming.ipynb  IG_transactions.ipynb  coverage.ipynb  dbnomics.ipynb  yahoo_finance.ipynb
resources/: Bank Rate history and data  Bank of England Database.csv  BoE-Database_export.csv  nasdaq.csv
tmp/: history_raw.csv
(+627 files in other folders)
