[tool.poetry]
name = "autoIG"
version = "0.1.0"
description = "A simple package for implementing algorythmic trading"
authors = ["ezra citron <ezracitron@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
trading-ig = "^0.0.17"
pandas = "^1.4.0"
munch = "^2.5.0"
tenacity = "^8.0.1"
webdriver-manager = "^3.5.2"
requests = "^2.27.1"
boto3 = "^1.20.54"
retrying = "^1.3.3"
pyjanitor = "^0.24.0"
scikit-learn = '^1.2.0'

[tool.poetry.dev-dependencies]
DBnomics = "^1.2.3"
feature-engine = "^1.3.0"
black = "^22.3.0"
tpqoa = {git = "https://github.com/yhilpisch/tpqoa.git"}
selenium = "^4.1.0"
yfinance = "^0.1.70"
mlflow = "^2.1.1"
bs4 = "^0.0.1"
openpyxl = "^3.0.10"
ipykernel = "^6.9.0"
plotnine = "^0.8.0"

[tool.poetry.scripts]

deployment = 'autoIG.deployment.deployment_v4:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
